Update Saxon-HE to 12.9 and enable native access for javafx.graphics